added image and css link

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,3 +1,3 @@
-{{!-- {{data}} --}}
+<img src="assets/img/hamburger.jpg" alt="">
 <input type="text">
 <button type="submit" class="btn btn-primary">Submit</button>
