--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,6 @@
-
+<div class="row center">
+    
 <img src="assets/img/hamburger.jpg" alt="">
+</div>
 <input type="text">
 <button type="submit" class="btn btn-primary">Submit</button>
